# DistanceCalculation

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build_cmake.yml
inc/: GeodDistanceCalculator.h  Point.h  ReallySimpleDistanceCalculator.h  SimpleDistanceCalculator.h  SphereDistanceCalculator.h
src/: CMakeLists.txt  GeodDistanceCalculator.cpp  main.cpp
